Фикс критических багов, связанных с созданием сущностей